third_party/move/move-compiler-v2/tests/checking/typing/lambda2.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `M::fun_arg_lambda_not_allowed` has a function parameter:
   ┌─ tests/checking/typing/lambda2.move:84:16
   │
84 │     public fun fun_arg_lambda_not_allowed(x: |u64|) {} // expected lambda not allowed
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^ - Parameter `x` has function-valued type `|u64|`.

error: Functions may not return function-typed values, but function `M::inline_result_lambda_not_allowed` return type is the function type `|u64|`:
   ┌─ tests/checking/typing/lambda2.move:86:59
   │
86 │     public inline fun inline_result_lambda_not_allowed(): |u64| {  // expected lambda not allowed
   │                                                           ^^^^^

error: Functions may not return function-typed values, but function `M::fun_result_lambda_not_allowed` return type is the function type `|u64|`:
   ┌─ tests/checking/typing/lambda2.move:89:49
   │
89 │     public fun fun_result_lambda_not_allowed(): |u64| {  // expected lambda not allowed
   │                                                 ^^^^^
